# estela

./: .gitignore  README.md  package-lock.json  package.json  usage.md
.github/workflows/: build.yml
PHY I Mechanics/0_Vector and Math/PHY1-VEC-VASTV-09072025/: PHY1-VEC-VASTV-09072025.yml
docs/: index.html  one-pager.html
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
