[package]
name = "estela"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
base64 = "0.22"
http = "1"
open = "5"
dirs = "5"
